[package]
name = "html-strong"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/torsteingrindvik/html-strong"
description = "Strongly typed HTML generation, suitable for server side rendering and templating."
categories = ["asynchronous", "web-programming"]
readme = "README.md"
keywords = ["html", "web", "templates", "ssr", "server side renedering"]
license = "MIT OR Apache-2.0"

[dependencies]
cached = "0.34.0"
dyn-clonable = "0.9.0"
mime = "0.3"
tower-http = { version = "0.2", features = ["fs", "trace"] }
tracing = "0.1.32"
url = "2"

[dev-dependencies]
tracing-subscriber = "0.3.10"
axum = "0.4"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
pretty_assertions = "1"
