[package]
name = "examples-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-strong = { path = "../.." }

axum = "0.5"
axum-extra = { version = "0.2", features = ["cookie"] }

tracing = "0.1.32"
tracing-subscriber = "0.3.10"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.2", features = ["fs", "trace", "compression-full"] }

pretty_assertions = "1"
anyhow = "1.0.56"
serde = { version = "1.0.136", features = ["derive"] }
futures = "0.3"
cached = "0.34.0"
url = { version = "2.2.2", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1"
mime = "0.3"

reqwest = { version = "0.11", features = ["json"] }
